--- a/MVCShoesShop/MVCShoesShop/MVCShoesShop.csproj
+++ b/MVCShoesShop/MVCShoesShop/MVCShoesShop.csproj
@@ -495,6 +495,9 @@
     <Content Include="Views\GioHang\DatHang.cshtml" />
     <Content Include="Views\GioHang\Xacnhandonhang.cshtml" />
     <Content Include="Views\Admin\Login.cshtml" />
+    <Content Include="Views\User\DonDatHang.cshtml" />
+    <Content Include="Views\Shop\Info.cshtml" />
+    <Content Include="Views\Shop\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
